# mini-gmp-plus

./: CMakeLists.txt  README.md  bitops64.h  mini-gmp-plus-Changelog  mini-gmp.c  mini-gmp.h  mini-mpq.h
.github/workflows/: build.yml
tests/: CMakeLists.txt  t-add.c  t-mul.c  t-sub.c  testutils.c
tests/unused/: Makefile  README.md
